# backend/app/api/v1/__init__.py
@@ -19,6 +19,7 @@ from app.media.router import router as media_router
 from app.notifications.router import router as notifications_router
 from app.payments.router import router as payments_router
 from app.story.router import router as story_router
+from app.valuation.router import router as valuation_router
 from app.vehicles.router import router as vehicles_router
 from app.warehouse.router import router as warehouse_router
 
@@ -35,6 +36,7 @@ api_router.include_router(media_router)
 api_router.include_router(notifications_router)
 api_router.include_router(payments_router)
 api_router.include_router(story_router)
+api_router.include_router(valuation_router)
 api_router.include_router(vehicles_router)
 api_router.include_router(warehouse_router)
 
